# phi-adapter-hue

./: .gitignore  CMakeLists.txt  README.md  hue-config.json
debian/: changelog  control  debhelper-build-stamp  files  phi-adapter-hue.substvars  rules
debian/.debhelper/phi-adapter-hue/: dbgsym-build-ids
debian/.debhelper/phi-adapter-hue/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/phi-adapter-hue/dbgsym-root/usr/share/doc/: phi-adapter-hue-dbgsym
debian/phi-adapter-hue/DEBIAN/: control  md5sums
debian/phi-adapter-hue/usr/share/doc/phi-adapter-hue/: copyright
src/: hue_http.cpp  hue_http.h  hue_model.cpp  hue_model.h  hue_probe.cpp  hue_probe.h  hue_schema.cpp  hue_schema.h  hue_sidecar.cpp  hue_sidecar.h  hueadapter.cpp  hueadapter.h  hueadapterfactory.cpp  hueadapterfactory.h  main.cpp
